--- a/domestika js course/domestikalook.css
+++ b/domestika js course/domestikalook.css
@@ -111,3 +111,80 @@ main {
 .success.Card {
   backface-visibility: hidden;
 }
+
+.levels,
+.game-over,
+.game-end {
+  display: none;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: var(--gradient);
+}
+
+.levels.visible,
+.game-over.visible,
+.game-end.visible {
+  display: flex;
+}
+
+/*end game message*/
+.module {
+  background: white;
+  padding: 3rem 3rem 1rem;
+  margin: auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 10px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25), 4px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.module h2 {
+  color: var(--orange);
+  font-family: var(--font-display);
+  margin: 0;
+}
+
+.module p {
+  font-size: 1.5rem;
+}
+
+.module button {
+  margin: 3rem 0;
+}
+.module .replay {
+  color: var(--hotpink);
+  background: transparent;
+  border: 0;
+  text-transform: capitalize;
+  font-family: var(--font);
+  font-size: 1rem;
+  margin: 0;
+}
+
+/*buttons*/
+button {
+  cursor: pointer;
+  border: 0;
+  background-image: var(--gradient);
+  padding: 0.75rem 4rem;
+  border-radius: 5rem;
+  color: white;
+  font-family: var(--font-display);
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  line-height: 1;
+  transition: 0.3s;
+}
+
+button:hover,
+button:focus {
+  opacity: 0.9;
+  outline: 0;
+}
